# deep-ml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ARCHITECTURE.md  BRANCH_PROTECTION_WORKFLOW.md  CI_CD_SETUP.md  FINAL_REPORT.md  PEP621_MIGRATION.md  QUICK_START.md  REFERENCE_CARD.md  WORKFLOW_DIAGRAM.md  dependabot.yml  labeler.yml  pull_request_template.md  validate-cicd.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  code-quality.yml  dependabot-auto-merge.yml  docs.yml  pr-automation.yml  python-ci.yml  python-publish.yml  release.yml
deepml/: accelerator_trainer.py  base.py  constants.py  datasets.py  fabric_trainer.py  losses.py  lr_scheduler_utils.py  tasks.py  tracking.py  train.py  trainer.py  transforms.py  utils.py  visualize.py
deepml/geospatial/: utils.py
deepml/metrics/: classification.py  segmentation.py
deepml/model_arch/: dlinknet.py  refine_net.py  unet.py
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  datasets.rst  deepml.metrics.rst  examples.rst  faq.rst  index.rst  installation.rst  losses.rst  metrics.rst  quickstart.rst  tasks.rst  tracking.rst  trainers.rst  tutorials.rst  usage.rst  visualization.rst
docs/source/api/: deepml.geospatial.rst  deepml.model_arch.rst  deepml.rst  modules.rst
mlruns/0/db658b3ec65e4b98ad00889694679511/tags/: mlflow.source.name
notebooks/net/tboard-run.1/: events.out.tfevents.1653761077.MAC-C02GKGVEMD6M.32629.0
scripts/: accelerator_trainer_mnist_example.py  fabric_trainer_mnist_example.py  fabric_trainer_multiclass_segmentation_example.py  test_metrics.py  torch_trainer_binary_segmentation_example.py  torch_trainer_mnist_example.py  torch_trainer_multiclass_segmentation_example.py
tests/: main.py  test_base_learner.py  test_fabric_trainer.py  test_learner.py  test_lr_scheduler_utils.py  test_metrics.py  test_visualize.py
tests/metrics/: segmentation.py
