[project]
name = "deepml"
version = "2.0.1"
description = "Wrapper Library for training deep neural networks using PyTorch framework."
authors = [
    {name = "Sagar Rathod",email = "sagar100rathod@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy (>=1.26.4)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "accelerator (>=2025.11.11,<2026.0.0)",
]

[tool.poetry]
packages = [{ include = "deepml" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = {extras = ["jupyter"], version = "^26.3.1"}
isort = "^6.0.1"
sphinx-autodoc-typehints = ">=1.23,<2.0"
sphinx = ">=6,<8"
myst-parser = "<3"
sphinx-rtd-theme = "^3.1.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
