[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "deepml"
version = "3.0.0"
description = "Wrapper Library for training deep neural networks using PyTorch framework."
authors = [
    {name = "Sagar Rathod", email = "sagar100rathod@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "tqdm>=4.67.1,<5.0.0",
    "pillow>=11.2.1,<12.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "pandas>=2.3.0,<3.0.0",
    "rasterio>=1.4.3,<2.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "tensorboard>=2.19.0,<3.0.0",
    "accelerate>=1.13.0,<2.0.0",
    "segmentation-models-pytorch>=0.5.0,<0.6.0",
    "lightning-fabric>=2.6.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "black[jupyter]>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "sphinx-autodoc-typehints>=1.23,<2.0",
    "sphinx>=6,<8",
    "myst-parser<3",
    "sphinx-rtd-theme>=3.1.0,<4.0.0",
    "sphinx-copybutton>=0.5.2,<0.6.0",
    "pylint>=3.0.0,<4.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.20.1,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
    "twine>=6.0.0,<7.0.0",
]

[tool.poetry]
packages = [{include = "deepml"}]


[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
